install and usage pages

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Ragout by fenderglass</title>
+    <title>Ragout - enlarge your contigs!</title>
   </head>
 
   <body>
@@ -31,6 +34,9 @@
         <hr>
 
         <section id="main_content">
+
+        <p><center><img src="images/ragout.png"/></center></p>
+
           <p>Ragout (Reference-Assisted Genome Ordering UTility) is a tool for
 assisted assembly using multiple references. It takes a short read
 assembly (a set of contigs), a set of related references
@@ -56,9 +62,12 @@ but we are working on expanding it to mammalian-scaled ones.</p>
 <pre><code>pip install ragout
 </code></pre>
 
-<p>You also can read more detailed <em>installation instructions</em>.</p>
+<p>You also can read more detailed <em><a href="install.html">installation instructions</a></em>.</p>
 
-<p>Please read <em>manual</em>.</p>
+<h2>
+<a name="manual" class="anchor" href="#manual"><span class="octicon octicon-link"></span></a>Manual</h2>
+
+<p>Please read it <em><a href="usage.html">here</a></em>.</p>
 
 <h2>
 <a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
