--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
           <h1>Ragout</h1>
-          <h2>Ragout - a tool for assisted assembly using multiple references</h2>
+          <h2>A tool for assisted assembly using multiple references</h2>
         </header>
 
         <section id="downloads" class="clearfix">
