--- a/index.html
+++ b/index.html
@@ -49,20 +49,15 @@ genome. Even if each reference is structurally divergent, it is possible
 to assemble the target into the correct set of scaffolds. Enlarge your
 contigs with Ragout!</p>
 
-<p>The current version of Ragout is limited to genomes of bacterial size,
-but we are working on expanding it to mammalian-scaled ones.</p>
+<p>The current version of Ragout was mostly tested on bacterial genomes,
+however it also contains an experimental support of mamalian-scaled ones.</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Latest version: 0.2 beta (Apr 15 2014)</p>
+<p>Latest version: 0.3 beta (Jun 22 2014)</p>
 
-<p>The easiest way to install Ragout is to type:</p>
-
-<pre><code>pip install ragout
-</code></pre>
-
-<p>You also can read more detailed <em><a href="install.html">installation instructions</a></em>.</p>
+<p>Read detailed installation instructions <em><a href="install.html">here</a></em>.</p>
 
 <h2>
 <a name="manual" class="anchor" href="#manual"><span class="octicon octicon-link"></span></a>Manual</h2>
@@ -104,7 +99,7 @@ Also, you can send your feedback at <a href="mailto:fenderglass@gmail.com">fende
 <h2>
 <a name="acknowledgements" class="anchor" href="#acknowledgements"><span class="octicon octicon-link"></span></a>Acknowledgements</h2>
 
-<p>The work was supported by VP Foundation.</p>
+<p>The work was partially supported by VP Foundation.</p>
 
 <p>We would like to thank:</p>
 
@@ -115,7 +110,12 @@ Also, you can send your feedback at <a href="mailto:fenderglass@gmail.com">fende
 </ul><h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>The program is distributed under BSD license</p>
+<p>Ragout itself is distributed under BSD license, but the package also contains
+some third-party software. Most of this software is completely free to redistribute,
+but some such as Sibelia or Newick parser are released under the GPL. We therefore release
+Ragout distribution under the GPL and note that the licenses of the constituent
+packages can be viewed in their subfolders. (see <em>LICENSE</em> file)</p>
+
         </section>
 
         <footer>
