--- a/usage.html
+++ b/usage.html
@@ -26,8 +26,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/fenderglass/Ragout/zipball/master" id="download-zip" class="button"><span>Get source</span></a>
-          <a href="downloads.html" id="download-tar-gz" class="button"><span>Other downloads</span></a>
+          <a href="https://github.com/fenderglass/Ragout/zipball/master" id="download-zip" class="button"><span>Latest source</span></a>
+          <a href="downloads.html" id="download-tar-gz" class="button"><span>Releases</span></a>
           <a href="https://github.com/fenderglass/Ragout" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
