--- a/install.html
+++ b/install.html
@@ -27,7 +27,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/fenderglass/Ragout/zipball/master" id="download-zip" class="button"><span>Latest source</span></a>
-          <a href="downloads.html" id="download-tar-gz" class="button"><span>Releases</span></a>
+          <a href="https://github.com/fenderglass/Ragout/releases" id="download-tar-gz" class="button"><span>Releases</span></a>
           <a href="https://github.com/fenderglass/Ragout" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
