--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
         <p><center><img src="images/ragout.png"/></center></p>
 
-<p>Version: 1.2</p>
-<p>Release date: 28 Sep 2015</p>
+<p>Version: 2.0b</p>
 
 <h2><a id="Description_23"></a>Description</h2>
 <p>Ragout (Reference-Assisted Genome Ordering UTility)
@@ -50,6 +49,12 @@ it produces a chromosome-scaled assembly (as a set of gapped scaffolds).</p>
 using breakpoint graph.</p>
 <p>The first version of Ragout was limited to bacterial genomes only,
 but currently there is an experimental support of mammalian-scaled genomes as well.</p>
+<h2><a id="RECOMB"></a>RECOMB 2016</h2>
+
+
+<p>Supplementary materials for RECOMB 2016 submission could be found at  
+<em><a href="https://drive.google.com/file/d/0B1pUguR1yn7TNklYUnpxZVdnSFk/view?usp=sharing">this link</a></em>.</p>
+
 <h2><a id="Install_38"></a>Install</h2>
 
 
