redirect to github repo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+  	<script>
+	window.location = "https://github.com/fenderglass/Ragout";
+	</script>
     <div id="container">
       <div class="inner">
 
